# vsomeip-anroid-cmake

./: CMakeLists.txt  README.md
cmake/: FindBoost.cmake  FindVsomeip3.cmake
hello_world/: CMakeLists.txt
